--- a/Etap 1/Opis świata rzeczywistego.tex
+++ b/Etap 1/Opis świata rzeczywistego.tex
@@ -14,9 +14,9 @@
 \section{System}
 \indent\indent Główną funkcjonalnością systemu jest składanie zamówień przez użytkowników. Po złożeniu zamówienia otrzymuje ono status 'Przyjęte', następnie restaurator może zmienić status na 'W realizacji', a~potem 'Zrealizowane'. Przy każdym lokalu pokazywana jest cena dostawy wyliczona jako iloczyn stawki kilometrowej lokalu i odległości do klienta.
 \subsection{Administrator systemu}
-\indent\indent W systemie istnieje jedno konto administratora, który ma uprawnienia do dodawania, usuwania, a także pełnej edycji kont i oferty lokali (dodawanie produktów, usuwanie produktów, zmiana cen, ustawianie potraw jako nieaktywne do końca dnia, ustawienie wcześniejszych godzin zamknięcia wybranego dnia, natychmiastowe zamknięcie lokalu).
+\indent\indent W systemie istnieje konto administratora, który ma uprawnienia do dodawania, usuwania, a~także pełnej edycji oferty lokali, tj. dodawanie produktów, usuwanie produktów, zmiana cen, ustawianie potraw jako nieaktywne do końca dnia, ustawienie wcześniejszych godzin zamknięcia wybranego dnia, natychmiastowe zamknięcie lokalu. Ma on też możliwość edycji oraz usuwania użytkowników.
 \subsection{Klient}
-\indent\indent Zarejestrowany użytkownik posiada w bazie danych określone przy rejestracji dane dostawy oraz kontaktowe, które może edytować samodzielnie w~dowolnym czasie z poziomu swojego konta. Na koncie użytkownika będzie wyświetlana historia zamówień z ostatniego roku.
+\indent\indent Zarejestrowany użytkownik posiada w bazie danych określone przy rejestracji dane dostawy oraz kontaktowe, które może edytować samodzielnie w~dowolnym czasie z poziomu swojego konta. Klient po zalogowaniu posiada dostęp do historii zamówień z ostatniego roku.
 \subsection{Restaurator}
 \indent\indent Restaurator, ze specjalnego konta ma możliwość zmiany statusu zamówienia.
 \subsection{Lokale}
